rust/src/methods/decode/snapshots/md_fragments@subscript.md.snap
---
source: rust/src/methods/decode/md.rs
expression: decode_fragment(&content)
input_file: fixtures/fragments/md/subscript.md

---
[
  {
    "type": "Paragraph",
    "content": [
      "Subscripts like H",
      {
        "type": "Subscript",
        "content": [
          "2"
        ]
      },
      "0."
    ]
  }
]
