rust/src/methods/decode/snapshots/pandoc_fragments@code-block.json.snap
---
source: rust/src/methods/decode/pandoc.rs
expression: json
input_file: fixtures/fragments/pandoc/code-block.json

---
[
  {
    "type": "CodeBlock",
    "text": "Some plain text"
  },
  {
    "type": "CodeBlock",
    "text": "# Some Python code\n1 + 1",
    "programmingLanguage": "python"
  },
  {
    "type": "CodeBlock",
    "text": "An indented code block\nin unspecified language."
  }
]
