rust/src/methods/decode/snapshots/pandoc_fragments@code-fragment.json.snap
---
source: rust/src/methods/decode/pandoc.rs
expression: json
input_file: fixtures/fragments/pandoc/code-fragment.json

---
[
  {
    "type": "Paragraph",
    "content": [
      "Some ",
      {
        "type": "CodeFragment",
        "text": "code"
      },
      " in a paragraph."
    ]
  }
]
