rust/src/methods/decode/snapshots/pandoc_fragments@raw-block.json.snap
---
source: rust/src/methods/decode/pandoc.rs
expression: json
input_file: fixtures/fragments/pandoc/raw-block.json

---
[]
